Add Dockerfile for Java 21 application with multi-stage build
- Implement multi-stage Dockerfile to build and run the Java 21 application.
- Use Ubuntu as the base image to install Java 21 and Maven.
- Optimize runtime image to include only necessary dependencies.
- Expose port 8080 for the application.
- Enable interaction with Docker using the Docker socket.